--- a/CSS Files/index.css
+++ b/CSS Files/index.css
@@ -1,3 +1,5 @@
+
+
 @keyframes slide-in-bottom {
   0% {
     transform: translateY(200px);
@@ -8,6 +10,11 @@
     opacity: 1;
   }
 }
+::-webkit-scrollbar {
+  display: none;
+}
+
+
 .amazing-aerial-shot-of-a-moder,
 .roof-and-columns-of-the-natura {
   width: 342px;
@@ -122,7 +129,7 @@
   width: 100%;
   position: relative;
   background-color: var(--color-gray-100);
-  height: 1072px;
+  height: 100vh;
   overflow: hidden;
   text-align: left;
   font-size: var(--font-size-45xl);
