--- a/CSS Files/country.css
+++ b/CSS Files/country.css
@@ -1,25 +1,29 @@
-.nav-bar,
-.nav-bar-wrapper {
+
+.website-title2 {
+  position: relative;
+  line-height: 48px;
+}
+.nav-bar-wrapper1,
+.nav-bar1 {
+  align-self: stretch;
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
 }
-.nav-bar {
-  align-self: stretch;
+.nav-bar1 {
   flex: 1;
   box-shadow: 0 11px 7.1px rgba(52, 55, 69, 0.16);
-  background-color: var(--color-gray-100);
+  background-color: var(--color-blue-matte);
   align-items: center;
   padding: var(--padding-5xs) var(--padding-81xl);
 }
-.nav-bar-wrapper {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 1440px;
-  height: 82px;
+.nav-bar-wrapper1 {
+  height: 64px;
   align-items: flex-start;
 }
+
+
+
 .arrow-left-2 {
   position: absolute;
   height: 64.58%;
@@ -58,7 +62,7 @@
   position: relative;
   border-radius: 50%;
   background-color: var(--color-gainsboro);
-  border: 5px solid var(--color-sienna);
+  border: 7px solid var(--color-blue);
   box-sizing: border-box;
   height: 136px;
 }
@@ -76,7 +80,7 @@
 .lorem-ipsum-dolor {
   font-size: var(--font-size-base);
   line-height: 26px;
-  color: var(--color-white);
+  color: var(--color-brown);
 }
 .text1 {
   flex: 1;
@@ -116,6 +120,8 @@
   position: relative;
   height: 648px;
   object-fit: cover;
+  border: 5px solid var(--color-blue);
+
 }
 .content,
 .country-information {
@@ -128,6 +134,16 @@
   justify-content: space-between;
   font-size: var(--font-size-13xl);
 }
+
+.center-container {
+  display: grid;
+  place-items: center;
+  height: 100vh;
+  width: 100%;
+
+}
+
+
 .content {
   position: absolute;
   top: 120px;
@@ -136,12 +152,13 @@
   justify-content: flex-start;
   gap: 48px;
   font-size: 36px;
-  color: var(--color-sienna);
+  color: var(--color-brown);
 }
+
 .timeline {
   width: 100%;
   position: relative;
-  background-color: var(--color-gray-100);
+  background-color: var(--color-blue-dark);
   height: 1240px;
   overflow: hidden;
   text-align: left;
