--- a/CSS Files/country.css
+++ b/CSS Files/country.css
@@ -18,10 +18,10 @@
   padding: var(--padding-5xs) var(--padding-81xl);
 }
 .nav-bar-wrapper1 {
+  width: 100%;
   height: 64px;
   align-items: flex-start;
 }
-
 
 
 .arrow-left-2 {
@@ -37,6 +37,7 @@
   max-height: 100%;
   object-fit: contain;
 }
+
 .iconlylight-outlinearrow-l {
   cursor: pointer;
   border: 0;
@@ -46,10 +47,12 @@
   position: relative;
   height: 48px;
 }
+
 .philippines {
   position: relative;
   line-height: 48px;
 }
+
 .back-btn {
   display: flex;
   flex-direction: row;
@@ -57,6 +60,7 @@
   justify-content: flex-start;
   gap: var(--gap-base);
 }
+
 .img {
   width: 136px;
   position: relative;
@@ -66,22 +70,26 @@
   box-sizing: border-box;
   height: 136px;
 }
+
 .b,
-.lorem-ipsum-dolor {
+.Sentence {
   align-self: stretch;
   position: relative;
 }
+
 .b {
   line-height: 48px;
   display: inline-block;
   height: 40px;
   flex-shrink: 0;
 }
-.lorem-ipsum-dolor {
+
+.Sentence {
   font-size: var(--font-size-base);
   line-height: 26px;
   color: var(--color-brown);
 }
+
 .text1 {
   flex: 1;
   display: flex;
@@ -90,31 +98,36 @@
   justify-content: flex-start;
   gap: var(--gap-5xs);
 }
-.by-year-info-8 {
+
+.infos {
   align-self: stretch;
   flex-direction: row;
   align-items: center;
   gap: var(--gap-13xl);
   cursor: pointer;
 }
-.by-year-info-7,
-.by-year-info-8,
+  
+.info,
+.infos,
 .information {
   display: flex;
   justify-content: flex-start;
 }
-.by-year-info-7 {
+
+.info {
   align-self: stretch;
   flex-direction: row;
   align-items: center;
   gap: var(--gap-13xl);
 }
+
 .information {
   width: 684px;
   flex-direction: column;
   align-items: flex-start;
   gap: var(--gap-17xl);
 }
+
 .map-icon {
   width: 457px;
   position: relative;
@@ -123,11 +136,13 @@
   border: 5px solid var(--color-blue);
 
 }
+
 .content,
 .country-information {
   display: flex;
   align-items: flex-start;
 }
+
 .country-information {
   width: 1241px;
   flex-direction: row;
@@ -136,15 +151,17 @@
 }
 
 .center-container {
-  display: grid;
-  place-items: center;
-  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-grow: 1;
   width: 100%;
 
 }
 
 
 .content {
+
   position: absolute;
   top: 120px;
   left: 100px;
@@ -156,10 +173,14 @@
 }
 
 .timeline {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   width: 100%;
+  justify-content: flex-start;
   position: relative;
   background-color: var(--color-blue-dark);
-  height: 1240px;
+  height: 100vh;
   overflow: hidden;
   text-align: left;
   font-size: var(--font-size-13xl);
