--- a/CSS Files/country.css
+++ b/CSS Files/country.css
@@ -61,7 +61,7 @@
   gap: var(--gap-base);
 }
 
-.img {
+.infos img {
   width: 136px;
   position: relative;
   border-radius: 50%;
@@ -75,7 +75,7 @@
 .Sentence {
   align-self: stretch;
   position: relative;
-}
+/}
 
 .b {
   line-height: 48px;
