--- a/CSS Files/index.css
+++ b/CSS Files/index.css
@@ -24,6 +24,28 @@
 
 }
 
+.home:before{
+  z-index: 777;
+  content:'';
+  position: absolute;
+  background: rgba(9, 30, 65, 0.3);
+  width:100%;
+  height:100%;
+  top:0;
+  left:0;
+}
+
+.home video{
+  z-index:000;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+
 .home .content{
   z-index: 888;
   width: 70%;
@@ -40,13 +62,35 @@
 }
 
 .home .content p{
-  margin-bottom: 10px ;
+  margin-bottom: 20px ;
 }
 
-.btn-padding{
-  padding: 30px 0;
+.btn {
+  cursor: pointer;
+  border: 3px solid var(--color-brown);
+  background-color: var(--color-blue-matte);
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.25);
+  box-sizing: border-box;
+  height: 60px; /* Increase button size */
+  width: 150px;
+  padding: 10px;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.3rem; /* Larger text size */
+  font-family: "Times New Roman", serif;
+  color: var(--color-brown);
+  text-transform: uppercase;
 }
 
-.btn{
-
+.btn:hover {
+  background-color: var(--color-brown); /* Add hover effect */
+  color: var(--color-blue-matte);
 }
+
+.btn-padding {
+  margin: 25px; /* Adjust spacing around buttons */
+}
+
+
+
+
