--- a/CSS Files/index.css
+++ b/CSS Files/index.css
@@ -3,12 +3,13 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+
 }
 
 
 .body{
   width: 100%;
-
+  background-color: var(--color-blue-dark);
 }
 
 .home{
@@ -65,18 +66,6 @@
   margin-bottom: 20px ;
 }
 
-#blur {
-  transition: filter 0.3s ease, opacity 0.3s ease;
-  filter: none;
-  opacity: 1;
-}
-
-#blur.active {
-  filter: blur(.5px);
-  opacity: 0.5;
-}
-
-
 .btn {
   cursor: pointer;
   border: 3px solid var(--color-brown);
@@ -92,6 +81,7 @@
   font-family: "Times New Roman", serif;
   color: var(--color-brown);
   text-transform: uppercase;
+  text-decoration: none;
 }
 
 .btn:hover {
@@ -104,58 +94,74 @@
 }
 
 
-#popup {
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  width: 1000px;
-  max-width: 90%; /* Makes it responsive */
-  padding: 50px;
-  box-shadow: 0 5px 30px rgba(0, 0, 0, 0.3);
-  background: var(--color-blue-dark);
-  border: 3px solid var(--color-brown); /* Fix border styling */
-  visibility: hidden; /* Default hidden */
-  opacity: 0; /* Invisible initially */
-  transition: all 0.5s ease; /* Smooth transition for visibility */
-  z-index: 1000; /* Ensures it appears above other elements */
-}
 
-/* Show popup */
-#popup.active {
-  visibility: visible;
-  opacity: 1;
-}
 
-/* Button styling inside popup */
-.era-btn {
-  background: var(--color-blue-matte);
-  border: 3px solid var(--color-brown);
-  color: white;
-  padding: 10px 20px;
-  margin: 10px;
-  font-size: 16px;
-  cursor: pointer;
-  transition: background 0.3s ease, transform 0.3s ease;
-  height: 90px; /* Increase button size */
-  width: 200px;
-}
 
-.era-btn:hover {
-  background-color: var(--color-brown); /* Add hover effect */
-  color: var(--color-blue-dark);
-  transform: scale(1.05); /* Subtle zoom effect */
-}
 
-.contain{
+/*FOOTER STYLE*/
 
+footer {
   display: flex;
-  flex-wrap: wrap; /* Wrap buttons if there's not enough space */
-  gap: 20px; /* Add space between buttons */
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+  padding: 2rem 9%;
+  background: var(--light-blue);
+}
+
+.footer-text p {
+  font-size: 1.6rem;
+  color: var(--black);
+}
+
+.footer-iconTop a {
+  position: relative;
+  display: inline-flex;
   justify-content: center;
   align-items: center;
-  padding: 50px;
+  padding: .6rem;
+  background: var(--medium-blue);
+  border: .2rem solid var(--medium-blue);
+  border-radius: .4rem;
+  z-index: 1;
+  overflow: hidden;
+  text-decoration: none;
 }
 
+.footer-iconTop a::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 0;
+  height: 100%;
+  background-color: var(--dark-blue);
+  z-index: -1;
+  transition: .5s;
+}
 
+.footer-iconTop a:hover::before {
+  width: 100%;
+}
 
+.footer-iconTop a i {
+  font-size: 20px;
+  color: var(--dark-blue);
+  transition: .5s;
+}
+
+.footer-iconTop a:hover i {
+  color: var(--light-blue);
+}
+
+@media(max-width: 900px) {
+  .footer p {
+    font-size: 20px;
+  }
+  .footer-iconTop a i {
+    font-size: 18px;
+  }
+  .footer-iconTop a {
+    padding: .5rem;
+  }
+}
