--- a/CSS Files/index.css
+++ b/CSS Files/index.css
@@ -3,14 +3,110 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-
+  text-decoration: none;
+  border: none;
+  outline: none;
+  scroll-behavior: smooth;
 }
 
 
-.body{
+html {
+  overflow-x: hidden;
+  scroll-behavior: smooth;
+  scrollbar-color: var(--color-blue);
+}
+
+body {
+  background: var(--color-blue-dark);
+}
+
+/*NAVIGATION BAR WITH NAME AS LOGO*/
+
+.header {
+  position: fixed;
+  top: 0;
+  left: 0;
   width: 100%;
-  background-color: var(--color-blue-dark);
+  padding: 2rem 9%;
+  display: flex;
+  background-color: transparent;
+  justify-content: space-between;
+  align-items: center;
+  z-index: 100;
 }
+
+.logo img {
+  width: 90px;
+}
+
+.navbar {
+  flex: 1;
+  text-align:  right;
+}
+
+.navbar ul li {
+  list-style: none;
+  display: inline-block;
+  padding: 8px 30px;
+  position: relative;
+}
+
+.navbar ul li a {
+  color: var(--dark-brown);
+  text-decoration: none;
+  font-size: 24px;
+}
+
+.navbar ul li::after {
+  content: '';
+  width: 0%;
+  height: 2px;
+  background: var(--brown);
+  display: block;
+  margin: auto;
+  transition: 0.5s;
+}
+
+.navbar ul li:hover::after{
+  width: 100%;
+}
+
+nav .fa-solid {
+  display: none;
+}
+
+/* for smaller version */
+@media(max-width: 900px){
+  .logo img {
+    width: 60px;
+  }
+  .nav-links ul li {
+    display: block;
+  }
+  .nav-links{
+    position: absolute;
+    background: var(--light-yellow);
+    height: 100vh;
+    width: 200px;
+    top: 0;
+    right: -200px;
+    text-align: left;
+    z-index: 2;
+    transition: 1s;
+  }
+  nav .fa-solid {
+    display: block;
+    color: var(--brown);
+    margin: 10px;
+    font-size: 22px;
+    cursor: pointer;
+  }
+  .nav-links ul {
+    padding: 30px;
+  }
+}
+
+/* HOME SECTION*/
 
 .home{
   position: relative;
@@ -19,7 +115,6 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background: var(--color-blue-dark);
   color:var(--color-brown);
   text-align: center;
 
@@ -82,6 +177,7 @@
   color: var(--color-brown);
   text-transform: uppercase;
   text-decoration: none;
+  transition: 0.5s;
 }
 
 .btn:hover {
@@ -93,9 +189,147 @@
   margin: 25px; /* Adjust spacing around buttons */
 }
 
+/* HEADING OF EACH SECTIONS */
+.heading {
+  font-size: 3rem;
+  text-align: center;
+  color: var(--color-sienna);
+  margin-bottom: 5rem;
+}
+
+/* ABOUT SECTION */
+.about {
+  padding: 10rem 9% 2rem;
+  width: 100%;
+  margin: auto;
+  text-align: center;
+  position: relative;
+}
+.row-about {
+  display: flex;
+  justify-content: space-between;
+  gap: 2rem;
+  flex-wrap: wrap;
+}
+
+.col-about{
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 20px;
+}
+
+.col-about h3 {
+  font-size: 2rem;
+  margin: 1.5rem 0;
+  text-align: center;
+  color: var(--dark-brown);
+  font-weight: 700;
+}
+
+.col p {
+  font-size: 1rem;
+  line-height: 1.8;
+  text-align: center;
+  color: var(--brown);
+  margin: 0;
+}
 
 
+/* CONTACT SECTION*/
+.contact {
+  padding: 10rem 9% 2rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 2rem;
+}
 
+.contact-details {
+  text-align: center;
+}
+
+.contact-details h4 {
+  font-size: 2.1rem;
+  color: var(--dark-brown);
+  margin-top: 0.5rem;
+}
+
+.contact-details p {
+  font-size: 1.6rem;
+  margin: 1rem 0 1rem;
+  cursor: text;
+  color: var(--brown);
+}
+
+.contact-details a {
+  font-size: 1.6rem;
+  margin: 1rem 0 1rem;
+  color: var(--brown);
+}
+
+.contact-details a {
+  font-size: 1.6rem;
+  color: var(--brown);
+  font-weight: 500;
+  transition: .3s;
+}
+
+.contact-details a:hover {
+  color: var(--red);
+}
+
+.contact-details i {
+  margin: 0 1rem 0 1rem;
+}
+
+.row-contact  {
+  display: flex;
+  justify-content: space-between;
+  gap: 2rem;
+  flex-wrap: wrap;
+}
+
+.col{
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  padding: 20px;
+}
+
+.col h3 {
+  font-size: 2rem;
+  margin: 1.5rem 0;
+  text-align: center;
+  color: var(--color-blue-matte);
+  font-weight: 700;
+}
+
+.col p {
+  font-size: 1rem;
+  line-height: 1.8;
+  text-align: center;
+  color: var(--color-blue);
+  margin: 0;
+}
+
+@media (max-width: 700px) {
+  .contacthead {
+    font-size: 2rem;
+  }
+  .contact-details h4 {
+    font-size: 1.5rem;
+  }
+  .contact-details p{
+    font-size: 1rem;
+  }
+  .contact-details a{
+    font-size: 1rem;
+  }
+}
 
 
 /*FOOTER STYLE*/
