--- a/CSS Files/Timeline.css
+++ b/CSS Files/Timeline.css
@@ -156,6 +156,13 @@ section {
     padding-bottom: 0.5rem;
 }
 
+.text-box h2:hover {
+    color:  var(--light-blue);
+    text-decoration: none;
+    cursor: pointer;
+    transition: color 0.3s ease;
+}
+
 .text-box h3 {
     font-size: 20px;
     color: var(--light-blue);
@@ -181,6 +188,7 @@ section {
     top: 0;
     border: 0.5rem solid var(--light-blue);
 }
+
 
 @media(max-width: 1050px){
     .row{
